<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="model"
            type="com.dantsu.app_printer.models.DefaultSettings" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uis.SettingsActivity"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/back"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16sp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/settings"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:text="@string/company_name"
                    />
                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8sp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/company_name"
                    android:background="@drawable/stroke_gray"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@={model.company_name}"
                    error="@{model.error_company_name}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:text="@string/address"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8sp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/address"
                    android:background="@drawable/stroke_gray"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@={model.address}"
                    error="@{model.error_address}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:text="@string/zip_code"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8sp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/zip_code"
                    android:background="@drawable/stroke_gray"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:inputType="number"
                    android:text="@={model.zip_code}"
                    error="@{model.error_zip_code}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:text="@string/vat_number"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8sp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/vat_number"
                    android:background="@drawable/stroke_gray"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:inputType="numberDecimal"
                    android:text="@={model.vat_num}"
                    error="@{model.error_vat_num}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:text="@string/tell"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8sp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/tell"
                    android:background="@drawable/stroke_gray"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@={model.tell}"
                    error="@{model.error_tell}"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:text="@string/vat_precentage"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8sp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/vat_precentage"
                    android:background="@drawable/stroke_gray"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="16dp"
                    android:text="@={model.vat_percentage}"
                    error="@{model.error_vat_percent}"
                    />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/save"
            />

    </LinearLayout>
</layout>
