<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.dantsu.app_printer.models.OperationModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="35sp"
                        android:textColor="@color/white"
                        android:background="@drawable/stroke_gray"
                        android:text="@string/settings"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        />


                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/total"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/stroke_gray"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/total"
                        android:inputType="numberDecimal"
                        android:text="@={model.total}"
                        error="@{model.error_total}"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/vat"
                        android:layout_marginTop="8dp"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/stroke_gray"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:hint="@string/vat"
                        android:inputType="numberDecimal"
                        android:layout_marginTop="8dp"
                        android:text="@={model.vat}"
                        error="@{model.error_vat}"
                        />



                    <Button
                        android:id="@+id/btnCalculate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calculate"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/white"
                        android:background="@color/black"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        />
                    <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center_horizontal"
                        />

                    <Button
                        android:id="@+id/btnPrint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/print"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/white"
                        android:background="@color/black"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:visibility="gone"
                        />
                </LinearLayout>

            </FrameLayout>
        </ScrollView>

    </LinearLayout>

</layout>
