<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="model"
            type="com.dantsu.app_printer.models.DefaultSettings" />
        <variable
            name="model2"
            type="com.dantsu.app_printer.models.OperationModel" />
        <variable
            name="date"
            type="String" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:context=".uis.PrintActivity"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/company_name"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text="@{model.company_name}"
                        />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/address"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text="@{model.address}"
                        />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/zip_code"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text="@{model.zip_code}"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/tell"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text="@{model.tell}"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/vat_precentage"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text='@{model.vat_percentage+"%"}'
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/total"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text="@{model2.total}"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/vat"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text="@{model2.vat_value}"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/total_payment"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textAlignment="viewEnd"
                        android:text="@{model2.total_payment}"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/time_date"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.35"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:text="@{date}"
                        android:textAlignment="viewEnd"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/print"
            />
    </LinearLayout>
</layout>
